--- a/css/main.css
+++ b/css/main.css
@@ -100,10 +100,10 @@ h1 {
 }
 .title_box {
 	position: absolute;
-    top: 50%;
+	height: 357px;
+    top: 296px;
     left: 0;
-    margin-top: -141px;
-}
+    }
 section {
 		background-color: #131218;
 }
