--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 @font-face {
 
-font-family: 'HelveticaNeueCyr';
+font-family: 'HelveticaNeueCyr-Roman';
 
-src: url('../fonts/HelveticaNeueCyr-Black.eot');
+src: url('../fonts/HelveticaNeueCyr-Roman.eot');
 
-src: url('../fonts/HelveticaNeueCyr-Black.eot?#iefix') format('eot'),
+src: url('../fonts/HelveticaNeueCyr-Roman.eot?#iefix') format('eot'),
 
-url('../fonts/HelveticaNeueCyr-Black.woff') format('woff'),
+url('../fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
 
-url('../fonts/HelveticaNeueCyr-Black.ttf') format('truetype'),
+url('../fonts/HelveticaNeueCyr-Roman.ttf') format('truetype'),
 
-url('../fonts/HelveticaNeueCyr-Black.svg#webfont') format('svg');
+url('../fonts/HelveticaNeueCyr-Roman.svg#webfont') format('svg');
 
 font-weight: normal;
 
@@ -32,9 +32,9 @@ url('../fonts/HelveticaNeueCyr-Bold.ttf') format('truetype'),
 
 url('../fonts/HelveticaNeueCyr-Bold.svg#webfont') format('svg');
 
-font-weight: normal;
+font-weight: bold;
 
-font-style: normal;
+font-style: bold;
 
 }
 
