--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,7 @@ nav {
 	margin-right: 48px;
 
 }
+
 .menu a {
 	color: #000;
 	text-decoration: none;
@@ -138,6 +139,7 @@ h1 {
 	color: #000;
 	text-align: left;
 }
+
 .button_diag {
 	background: #fff;
 	color: #000;
@@ -191,16 +193,19 @@ h1 {
 	list-style: none;
 	margin-bottom: 15px;
 }
+
 .text_form_s{
 	position: absolute;
 	left: 40%;
 	top: 368px;
 }
+
 .text_form_s h2 {
     color: #66bbff; 
 	text-align: left;
     font-size: 26px;
 }
+
 .text_form_s li {
 	color: #fff;
 	text-align: left;
@@ -223,6 +228,7 @@ h1 {
 	margin-top: 50px;
 	
 }
+
 #services {
 	background: #fff;
 	
@@ -260,7 +266,6 @@ h1 {
 	margin-bottom: 80px;
 }
 
-
 .button_type {
 	background: #fff;
 	color: #56aef4;
@@ -272,6 +277,7 @@ h1 {
 	text-decoration: none;
 	text-align: center;
 }
+
 .type_gadget {
     margin-bottom: 50px; 
 }
@@ -289,7 +295,6 @@ h1 {
 .type_gadget li {
    	margin-right: 73px;
 	display: inline-block;
-
 }
 
 .type_gadget a {
@@ -326,7 +331,6 @@ h1 {
 	padding: 5px;
 	text-decoration: none;
 	text-align: center;
-
 }
 
 .font_table p {
@@ -349,7 +353,6 @@ h1 {
 	float: left;
 	margin-right: 23px;
 	margin-bottom: 20px;
-
 }
 
 .service_block_time {
@@ -424,7 +427,7 @@ h1 {
 	border: 1px solid #ccc;
 	width: 460px;
 	border-radius: 5px;
-	float:left;
+	float:right;
 	
 }
 
@@ -535,4 +538,20 @@ h1 {
 	width: 360px;
 	margin-left: 55px;
 	margin-bottom: 50px; 
+}
+
+.service_help {
+	color: #000;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	margin-bottom: 15px;
+
+}
+.service_help_contact {
+	color: #000;
+	font-size: 20px;
+    text-align: center;
+	margin-bottom: 15px;
+
 }
