--- a/css/main.css
+++ b/css/main.css
@@ -218,15 +218,49 @@ h1 {
 	background: #fff;
 	color: #000;
 	border: 1px solid #000;
-	border-radius: 3px;
+	border-radius: 5px;
 	display: block;
-	width: 310px;
+	width: 295px;
 	padding: 10px 0;
 	text-decoration: none;
-	font-weight: bold;
-	text-align: left;
-	margin-top: 50px;
+    text-align: left;
+    padding-top: 15px;
+    padding-bottom: 15px; 
+    padding-left: 15px;
+    float: left;
+		
+}
+
+.number_button {
+    background: #fff;
+	color: #000;
+	border: 1px solid #000;
+	border-radius: 5px;
+	display: block;
+	width: 295px;
+	padding: 10px 0;
+	text-decoration: none;
+    text-align: left;
+    padding-top: 15px;
+    padding-bottom: 15px; 
+    padding-left: 15px;
+    float: left;
 	
+}
+.call_button {
+	background: #000;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	display: block;
+	width: 295px;
+	padding: 10px 0;
+	text-decoration: none;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px; 
+    padding-left: 15px;
+    float: left;
 }
 
 #services {
