--- a/css/main.css
+++ b/css/main.css
@@ -645,14 +645,17 @@ nav {
 	margin-bottom: 15px;
 
 }
+footer {
+	background-color: #e3dfe1;
+	min-height: 100px;
+	margin-top: 50px;
+}
 
 .footer_text {
 	color: #d42889;
 }
 
 .footer_maket {
-	background-color: #e3dfe1;
-	min-height: 100px;
 	text-align: center;
 	font-size: 20px;
 }
@@ -660,8 +663,40 @@ nav {
 	padding-top: 50px;
 }
 
-/*@media (min-width:px)
+@media (min-width:1150px)
 {
-.container { width: 600px;
+.container { width: 992px;
  }
-}*/
+#portfolio {
+	background: #f2f2f2;
+}
+
+.feedback_information {
+	width: 600px;
+}
+.name_information input {
+	display: block;
+	width: 170px;
+	padding: 10px 0;
+	
+}
+
+.number_information input {
+	width: 170px;
+	padding: 10px 0;
+
+}
+
+.call_master_information button {
+	width: 170px;
+	padding: 10px 0;
+	
+}
+.checkbox {
+	width: 500px;
+    display: inline-block;
+    float: left;
+    padding-top: 20px; 
+    text-align: left;
+
+}
